vlib/v/checker/tests/inout/struct_unknown_field.out
vlib/v/checker/tests/inout/struct_unknown_field.v:8:9: error: struct init: no such field `bar` for struct `Test`
    6|     t := Test{
    7|         foo: true
    8|         bar: false
               ^
    9|     }
   10| }